Add builded files

--- a/package.json
+++ b/package.json
@@ -4,16 +4,7 @@
   "description": "A fully fledged audio module created for music apps",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "scripts": {
-    "build": "rimraf lib && tsc",
-    "lint": "eslint \"src/**/*.ts\"",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "yarn build",
-    "prepublishOnly": "git submodule update --init --recursive && yarn lint",
-    "preversion": "yarn lint",
-    "version": "yarn format && git add -A src",
-    "postversion": "git push && git push --tags"
-  },
+  "scripts": {},
   "files": [
     "lib/**/*",
     "ios/**/*",
@@ -60,9 +51,6 @@
     "react-native": ">=0.60.0-rc.2"
   },
   "devDependencies": {
-    "@types/react-native": "^0.60.0",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
